Index screen decoration

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,21 +15,29 @@
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides">
-    <div class="numbertext">1 / 3</div>
-    <img src="~/Images/blizzhomestayadd.jpeg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div class="numbertext">1 / 5</div>
+    <img src="~/Images/oneHut.png" style="width:100%">
   </div>
 
-  <div class="mySlides">
-    <div class="numbertext">2 / 3</div>
-    <img src="~/Images/blizzhomestay.jpeg" style="width:100%">
-    <div class="text">Caption Two</div>
+  <div class="mySlides padding-top-10">
+    <div class="numbertext">2 / 5</div>
+    <img src="~/Images/LetzDiscuss.png" style="width:100%">
   </div>
 
-  <div class="mySlides">
-    <div class="numbertext">3 / 3</div>
-    <img src="~/Images/blizzhomestayadd.jpeg" style="width:100%">
-    <div class="text">Caption Three</div>
+  <div class="mySlides padding-top-10">
+    <div class="numbertext">3 / 5</div>
+    <img src="~/Images/ReadyToChange.png" style="width:100%">
+  </div>
+
+  <div class="mySlides padding-top-9">
+    <div class="numbertext">4 / 5</div>
+    <img src="~/Images/NewFeature.png" style="width:100%">
+  </div>
+
+    <div class="mySlides padding-top-10">
+    <div class="numbertext">5 / 5</div>
+    <img src="~/Images/ThankYou.png" style="width:100%">
+     <!-- <div class="text">Caption Three</div> -->
   </div>
 
   <!-- Next and previous buttons -->
@@ -43,5 +51,7 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
 </div>
  
