--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,21 +21,42 @@
   <div class="mySlides padding-top-10">
     <div class="numbertext">2 / 5</div>
     <img src="~/Images/LetzDiscuss.png" style="width:100%">
+    <p>
+      Helps the user in completing specified tasks: Application software is designed with the user in mind. They help the end-user with specialized tasks in a variety of industries, including education, business, and entertainment. Microsoft Word, for example, is popular application software that allows users to create, edit, delete, and do other tasks with word documents.
+<br><br>Manages and manipulates data: Business companies utilize application software to manage and manipulate employees, customers, and other databases. Enterprise resource management systems and customer relationship management systems are two common examples of application software.
+<br><br>Allows users to effectively organize information: Individual users can use application software to efficiently create and handle large amounts of data. Microsoft Excel, for example, is popular application software that allows users to manage datasheets.
+    </p>
   </div>
 
   <div class="mySlides padding-top-10">
     <div class="numbertext">3 / 5</div>
     <img src="~/Images/ReadyToChange.png" style="width:100%">
+    <p>
+      Business owners are always looking for ways to increase profitability and efficiency. They are trying to use effectively their resources in order to improve performance and increase profits and moving to a digital solution will encourage continuous improvement thanks to standardized processes, increased production and lower error rates. If your employees spend a significant amount of time searching for the right document in a filing cabinet, you need to do something. By digitizing your documents, your company can reduce the amount of manual labor and supplies required to find, correct, and refile documentation and save money.
+    <br><br>High-quality data is important because it gives us accurate and timely information to manage services and accountability. Also, it helps us to prioritize and ensure the best use of resources. When you collect data using paper forms, there is always the possibility of incomplete, incorrect, or inaccurate entries during manual transcription or double entry into another system. Poor handwriting, or missed any data due to human error can lead to all-out disasters. Using digital data collection technologies you can increase data quality, even when resources are limited. When using digital solutions, data entry is controlled with thresholds and field validation.  Wrong decisions are the result of poor quality of data and poor data management processes. Improving your data quality and sustaining good quality data output are major challenges faced by the enterprises today and digital solutions could be the answer.
+   
+    </p>
   </div>
 
   <div class="mySlides padding-top-9">
     <div class="numbertext">4 / 5</div>
     <img src="~/Images/NewFeature.png" style="width:100%">
+    <p>
+       <b>Employee management system: </b>It is a core part of HR. This article will go over the best tools to manage employee records, work history, and other important employee data.
+
+If you’re researching HR technology, you’re probably doing so for one of two reasons. 1) You need an improvement to the system you currently use and are looking for an employee management app that has more (or better) features than what you are used to. 2) You are a growing business looking to implement employee management software for the first time. Either way, we can help.
+
+Whether you’re here to find a new tool or perhaps introducing an employee management system for the first time, this article will help you quickly compare and evaluate the best employee management system along with other human resources software. So let’s dive in!
+    </p>
   </div>
 
     <div class="mySlides padding-top-10">
     <div class="numbertext">5 / 5</div>
     <img src="~/Images/ThankYou.png" style="width:100%">
+    <p>
+      We sincerely thank you for purchasing our  product. We have endeavored to satisfy our customers. We always assure the quality of our products. We give utmost importance to maintain the standard of our products. Please get back to us for any suggestions or complaints regarding the product. We wish to continue our relationship with you.
+
+    </p>
      <!-- <div class="text">Caption Three</div> -->
   </div>
 
