--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -83,7 +83,44 @@
             <textarea name="addtionalInfo" class="text-area-book"></textarea><br> 
             <textarea name="addtionalInfoHistory" class="text-area"></textarea>
            *@
-           @Html.TextAreaFor(m => m.Book.AdditionalInfo, new {@class="text-area"})  
+           <table class="width-100">  
+            <td>
+                <tr>
+                    <td class="width-50">
+                        <table class="table table-bordered table-responsive table-hover"> 
+                            <tr>
+                                <th class="text-align-left background-color-cornflowerblue">Bill Amount</th>
+                                <td>
+                                     @Html.TextBox("Bill Amount",null, new{@class = "text-align-right"})
+                                </td>
+                            </tr>
+                            <tr>
+                                <th class="text-align-left background-color-cornflowerblue">Amount Paid</th>
+                                <td>
+                                    @Html.TextBox("Amount Paid",null, new{@class = "text-align-right"})
+                                </td>
+                            </tr>
+                            <tr>
+                                <th class="text-align-left background-color-cornflowerblue">Payment Status</th>
+                                <td>
+                                    @Html.TextBox("Payment Status",null, new{@class = "text-align-center", @readonly="readonly"})
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>
+                         <table class="table table-bordered table-responsive table-hover"> 
+                            <tr>
+                                <td>
+                                    @Html.TextAreaFor(m => m.Book.AdditionalInfo, new {@class="text-area"}) 
+                                </td>
+                            </tr>
+                         </table>
+                    </td>
+                </tr>
+                
+            </td>
+           </table>
         </td>
     </tr>
 </table>
