--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -507,6 +507,10 @@ body {
   width: 45%;
 }
 
+.width-50 {
+  width: 50%;
+}
+
 .width-60 {
   width: 60%;
 }
@@ -575,7 +579,7 @@ body {
   overflow-y: scroll;
   resize: none;
   width: 100%;
-  height: 80px;
+  height: 111px;
 }
 
 .text-area-book {
@@ -606,6 +610,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 .padding-top-9 {
   padding-top: 9%;
+}
+
+.background-color-cornflowerblue {
+  background-color: cornflowerblue !important;
+
 }
 
 
