--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -1,7 +1,14 @@
 @model oneHut.Models.BookingModel
+<script type="text/javascript">
+function uploadFiles() {
+        document.getElementById("postedFiles").click();
+}
+</script>
 <div style="width:100%; text-align: center;"> 
-     <form class="Booking" action="/Booking/Booking" method="post">
-    <div style="width:99%; text-align: center;">
+    <div class="row">    
+<form method="post" enctype="multipart/form-data" asp-controller="Booking" asp-action="Booking">
+        
+<div style="width:100%; text-align: center;">
 <table>
     <tr>
         <td class="text-left grid-header"><label>New Booking</label>
@@ -16,8 +23,8 @@
 
         <td class="width-5"><a href="/Booking/ClearBooking">
             <img src="~/Images/Clean.jpg"  class="width-60" title="Clear"></a></td>
-        <td class="width-5"><a href="/Booking/ClearBooking">
-            <img src="~/Images/camera1.jpg"  class="width-100" title="Clear"></a></td>
+        <td class="width-5"> <input type="file" id="postedFiles" name="postedFiles" multiple class="style-all-unset display-none"></input>
+            <img onclick="uploadFiles();"  src="~/Images/camera1.jpg"  class="width-90 cursor-pointer" title="Photo"></td>
         <td class="width-5">
             <button type="submit" class="style-all-unset">
             <img src="~/Images/book1.jpg" style="width:30px" title="Save"></button></td> 
@@ -134,3 +141,4 @@
 </div>
 </form>
     </div> 
+      </div>
