--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -156,12 +156,19 @@
                                                                     </div>
                                                                     i += i;
                                                                 }
+                                                                <!-- Next and previous buttons -->
+                                                                <a class="prev text-left"
+                                                                    onclick="plusSlides(-1)">&#10094;</a>
+                                                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                                                            }
+                                                            else
+                                                            {
+                                                                <div class="mySlides">
+                                                                    <img src="~/Images/No_image_available.png" style="width:100%" height="130">
+                                                                </div>
                                                             }
 
-                                                            <!-- Next and previous buttons -->
-                                                            <a class="prev text-left"
-                                                                onclick="plusSlides(-1)">&#10094;</a>
-                                                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                                                            
                                                         </div>
                                                         <br>
                                                     </td>
