--- a/Views/Booking/AddBooking.cshtml
+++ b/Views/Booking/AddBooking.cshtml
@@ -158,18 +158,14 @@ function isFileSelected(e) {
                                                                 int i = 1;
                                                                 @foreach (var imagelocation in Model.PostedFiles)
                                                                 {
-                                                                    <div class="mySlides">
+                                                                    <div class="mySlides" onclick="plusSlides(1)">
                                                                         <div class="numbertext"> @i.ToString() /
                                                                             @Model.PostedFiles.Count
                                                                         </div>
                                                                         <img src=@imagelocation height="130">
                                                                     </div>
-                                                                    i += i;
+                                                                    i += 1;
                                                                 }
-                                                                <!-- Next and previous buttons -->
-                                                                <a class="prev text-left"
-                                                                    onclick="plusSlides(-1)">&#10094;</a>
-                                                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
                                                             }
                                                             else
                                                             {
