--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,13 +13,11 @@
 <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
-  <div class="mySlides">
-    <div class="numbertext">1 / 5</div>
+  <div class="mySlides" onclick="plusSlides(1)">
     <img src="~/Images/oneHut.png" style="width:100%">
   </div>
 
-  <div class="mySlides padding-top-10">
-    <div class="numbertext">2 / 5</div>
+  <div class="mySlides padding-top-10" onclick="plusSlides(1)">
     <img src="~/Images/LetzDiscuss.png" style="width:100%">
     <p>
       Helps the user in completing specified tasks: Application software is designed with the user in mind. They help the end-user with specialized tasks in a variety of industries, including education, business, and entertainment. Microsoft Word, for example, is popular application software that allows users to create, edit, delete, and do other tasks with word documents.
@@ -28,8 +26,7 @@
     </p>
   </div>
 
-  <div class="mySlides padding-top-10">
-    <div class="numbertext">3 / 5</div>
+  <div class="mySlides padding-top-10" onclick="plusSlides(1)">
     <img src="~/Images/ReadyToChange.png" style="width:100%">
     <p>
       Business owners are always looking for ways to increase profitability and efficiency. They are trying to use effectively their resources in order to improve performance and increase profits and moving to a digital solution will encourage continuous improvement thanks to standardized processes, increased production and lower error rates. If your employees spend a significant amount of time searching for the right document in a filing cabinet, you need to do something. By digitizing your documents, your company can reduce the amount of manual labor and supplies required to find, correct, and refile documentation and save money.
@@ -38,8 +35,7 @@
     </p>
   </div>
 
-  <div class="mySlides padding-top-9">
-    <div class="numbertext">4 / 5</div>
+  <div class="mySlides padding-top-9" onclick="plusSlides(1)">
     <img src="~/Images/NewFeature.png" style="width:100%">
     <p>
        <b>Employee management system: </b>It is a core part of HR. This article will go over the best tools to manage employee records, work history, and other important employee data.
@@ -50,8 +46,7 @@ Whether you’re here to find a new tool or perhaps introducing an employee mana
     </p>
   </div>
 
-    <div class="mySlides padding-top-10">
-    <div class="numbertext">5 / 5</div>
+    <div class="mySlides padding-top-10" onclick="plusSlides(1)">
     <img src="~/Images/ThankYou.png" style="width:100%">
     <p>
       We sincerely thank you for purchasing our  product. We have endeavored to satisfy our customers. We always assure the quality of our products. We give utmost importance to maintain the standard of our products. Please get back to us for any suggestions or complaints regarding the product. We wish to continue our relationship with you.
@@ -60,13 +55,14 @@ Whether you’re here to find a new tool or perhaps introducing an employee mana
      <!-- <div class="text">Caption Three</div> -->
   </div>
 
-  <!-- Next and previous buttons -->
+  <!-- Next and previous buttons
   <a class="prev text-left" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a> 
+  -->
 </div>
 <br>
 
-<!-- The dots/circles -->
+<!-- The dots/circles 
 <div style="text-align:center">
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
@@ -74,4 +70,5 @@ Whether you’re here to find a new tool or perhaps introducing an employee mana
   <span class="dot" onclick="currentSlide(4)"></span>
   <span class="dot" onclick="currentSlide(5)"></span>
 </div>
+-->
  
