--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -87,17 +87,16 @@ body {
 .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
   width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
+  padding: 5px;
+  color: black;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
   text-decoration: none;
+  bottom: -5px;
 }
 
 /* Position the "next button" to the right */
@@ -110,7 +109,7 @@ body {
 .prev:hover,
 .next:hover {
   text-decoration: none;
-  background-color: rgba(0, 0, 0, 0.8);
+  /*  background-color: rgba(0, 0, 0, 0.8); */
 }
 
 /* Caption text */
@@ -126,11 +125,13 @@ body {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: black;
   font-size: 12px;
-  padding: 8px 12px;
+  padding: 3px 5px;
   position: absolute;
   top: 0;
+  background-color: cornflowerblue;
+  font-weight: 200;
 }
 
 /* The dots/bullets/indicators */
@@ -623,6 +624,13 @@ input[type=number]::-webkit-outer-spin-button {
 .background-color-cornflowerblue {
   background-color: cornflowerblue !important;
 
+}
+
+.link-container{
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  padding: 10px;
 }
 
 
